--- a/apps/web/src/styles/theme.css
+++ b/apps/web/src/styles/theme.css
@@ -55,7 +55,7 @@
   --text-2xl: 36px;
 
   /* Layout */
-  --content-width: 960px;
+  --content-width: 1320px;
 }
 
 * {
